--- a/grafana/prometheus.yml
+++ b/grafana/prometheus.yml
@@ -25,3 +25,7 @@ scrape_configs:
 - job_name: redis-server
   static_configs:
   - targets: ['redis-exporter:9121']
+
+- job_name: web
+  static_configs:
+  - targets: ['prometheus:9090']
